--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -1738,10 +1738,9 @@
                             request_id: requestId, // request_id 추가
                         },
                     };
+                    console.log("전송할 WebSocket 데이터:", JSON.stringify(pathData, null, 2));
+                    socket.send(JSON.stringify(pathData));
                 }
-
-                console.log("전송할 WebSocket 데이터:", JSON.stringify(pathData, null, 2));
-                socket.send(JSON.stringify(pathData));
                 return;
 
             } catch (error) {
@@ -1772,6 +1771,23 @@
 
                 // Reverse Path 이름 생성
                 const reversePathName = `${originalPathName}_reverse`;
+
+                // 동일한 이름의 Reverse Path가 이미 존재하는지 확인
+                const { data: existingReversePath, error: existingReversePathError } = await supabase
+                    .from('Path')
+                    .select('id')
+                    .eq('name', reversePathName)
+                    .maybeSingle();
+
+                if (existingReversePathError) {
+                    console.error('Reverse Path 중복 확인 중 오류 발생:', existingReversePathError);
+                    return;
+                }
+
+                if (existingReversePath) {
+                    alert(`Reverse Path "${reversePathName}"가 이미 존재합니다. 새로 생성하지 않습니다.`);
+                    return;
+                }
 
                 const { data: robotData, error: robotError } = await supabase
                     .from('Robot') // Robot 테이블에서
