--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -1799,7 +1799,7 @@
                 }
 
                 if (existingReversePath) {
-                    alert(`Reverse Path "${reversePathName}"가 이미 선택된 로봇에 존재합니다. 새로 생성하지 않습니다.`);
+                    alert(`Reverse Path "${reversePathName}"가 이미 존재합니다.`);
                     return;
                 }
 
@@ -1849,7 +1849,8 @@
                     console.error("Reverse Waypoint 삽입 중 오류 발생:", waypointError);
                     return;
                 }                
-
+                
+                alert(`"${reversePathName}"가 생성되었습니다.`);
                 console.log("Reverse Path와 Waypoints가 성공적으로 생성되었습니다.");
                 return;
 
