--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -1985,7 +1985,7 @@
                         <!-- 상단 영역 -->
                         <div style="position: relative; flex-shrink: 0;">
                             <!-- 뒤로 가기 버튼 -->
-                            <button onclick="openRobotSelectionPopup()" 
+                            <button onclick="goBackToRobotSelection()" 
                                 style="
                                     background: none; 
                                     border: none; 
@@ -2133,6 +2133,16 @@
                 console.error('Unexpected error cloning path:', error);
                 alert('An unexpected error occurred while cloning the path.');
             }
+        }
+
+        function goBackToRobotSelection() {
+            // 현재 팝업 닫기
+            const currentPopup = document.getElementById('pathSelectionPopup');
+            if (currentPopup) {
+                currentPopup.remove(); // 현재 팝업을 DOM에서 완전히 제거
+            }
+            // 이전 팝업 열기
+            openRobotSelectionPopup();
         }
 
         function displayPathOnMap(waypoints) {
