--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -2198,6 +2198,7 @@
                 .from('Waypoint')
                 .select('*')
                 .eq('pathId', pathId)
+                .order('id', { ascending: true }) // id 순서대로 오름차순 정렬
                 .then(({ data: waypoints, error }) => {
                     if (error) {
                         console.error('Error fetching waypoints:', error);
